force-app/main/default/objects/Case_AI_Suggestion__c/Case_AI_Suggestion__c.object-meta.xml
<CustomObject>
    <label>Case AI Suggestion</label>
    <pluralLabel>Case AI Suggestions</pluralLabel>
    <nameField>
        <label>Suggestion Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>