force-app/main/default/objects/Case_AI_Suggestion__c/fields/Case__c.field-meta.xml
<CustomField>
  <fullName>Case__c</fullName>
  <label>Case</label>
  <type>Lookup</type>
  <referenceTo>Case</referenceTo>
  <relationshipLabel>Case AI Suggestions</relationshipLabel>
  <relationshipName>CaseAI_Suggestions</relationshipName>
  <deleteConstraint>Restrict</deleteConstraint>
</CustomField>