force-app/main/default/objects/Case_AI_Suggestion__c/fields/Confidence__c.field-meta.xml
<CustomField>
  <fullName>Confidence__c</fullName>
  <label>Confidence</label>
  <type>Number</type>
  <precision>3</precision>
  <scale>2</scale>
</CustomField>