force-app/main/default/objects/Case_AI_Suggestion__c/fields/Suggested_Reply__c.field-meta.xml
<CustomField>
  <fullName>Suggested_Reply__c</fullName>
  <label>Suggested Reply</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>