force-app/main/default/objects/Case_AI_Suggestion__c/fields/Summary__c.field-meta.xml
<CustomField>
  <fullName>Summary__c</fullName>
  <label>Summary</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>